# devpulse

./: CLAUDE.md  CONCEPT.md  Cargo.toml  README.md  config.sample.toml
.claude/commands/: concept.md  plan.md  review.md
docs/: implementation-plan.md
docs/superpowers/specs/: 2026-04-17-docker-context-resolution-design.md
src/: action.rs  app.rs  config.rs  event.rs  filter.rs  lib.rs  main.rs
src/data/: docker.rs  docker_connector.rs  log_collector.rs  logs.rs  mod.rs  ports.rs  processes.rs
src/ui/: common.rs  layout.rs  mod.rs
src/ui/panels/: docker.rs  logs.rs  mod.rs  ports.rs  processes.rs
tests/: bench_overhead.rs
tests/integration/: app_test.rs  config_test.rs  filter_test.rs  main.rs
