[package]
name = "devpulse"
version = "0.1.0"
edition = "2021"
description = "Unified Developer Environment TUI"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
bollard = "0.20"
sysinfo = "0.38"
notify = "8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
anyhow = "1"
thiserror = "2"
arboard = "3"
dirs = "6"
tracing = "0.1"
tracing-appender = "0.2"
fuzzy-matcher = "0.3"
regex = "1"
chrono = "0.4"
async-trait = "0.1"
futures-util = "0.3"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
